Snapshotting current state.  Uses latest module releases
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@18130 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/src/Makefile
+++ b/edtApp/src/Makefile
@@ -27,13 +27,15 @@ edt_DBD += devMrfEr.dbd
 edt_DBD += asyn.dbd
 edt_DBD += busyRecord.dbd
 edt_DBD += busySupport.dbd
+edt_DBD += genSubRecord.dbd
 edt_DBD += sscan.dbd
 edt_DBD += ADSupport.dbd
 edt_DBD += simDetectorSupport.dbd
-edt_DBD += prosilicaSupport.dbd
+edt_DBD += edtPdvSupport.dbd
+edt_DBD += stream.dbd
 
 # ffmpegServer
-edt_DBD += ffmpegServer.dbd
+#edt_DBD += ffmpegServer.dbd
 
 # <name>_registerRecordDeviceDriver.cpp will be created from <name>.dbd
 edt_SRCS += edt_registerRecordDeviceDriver.cpp
@@ -46,6 +48,7 @@ edt_SRCS_DEFAULT += edtMain.cpp
 # base and std modules
 edt_LIBS += autosave
 edt_LIBS += devIocStats
+edt_LIBS += genSub
 
 # EVR
 edt_LIBS += evrSupport
@@ -56,7 +59,6 @@ edt_LIBS_Linux += mrfApi
 # areaDetector
 edt_LIBS += calc
 edt_LIBS += busy
-edt_LIBS += prosilica
 edt_LIBS += NDPlugin
 # GraphicsMagick not supported in areaDetector 1.9 for RHEL due to compiler issues
 #edt_LIBS += NDFileMagick
@@ -65,6 +67,9 @@ edt_LIBS += netCDF
 edt_LIBS += NeXus
 edt_LIBS += hdf5
 edt_LIBS += simDetector
+edt_LIBS += edtPdv
+edt_LIBS += pdv
+edt_LIBS += stream
 edt_LIBS += sscan
 edt_LIBS += asyn
 edt_LIBS += recIoc
@@ -78,7 +83,7 @@ edt_LIBS += registryIoc
 edt_LIBS += dbStaticIoc
 edt_LIBS += ca
 edt_LIBS += Com
-edt_LIBS += PvAPI
+#edt_LIBS += PvAPI
 edt_LIBS += sz
 edt_SYS_LIBS += X11
 edt_SYS_LIBS += xml2
@@ -87,12 +92,12 @@ edt_SYS_LIBS += jpeg
 edt_SYS_LIBS += z
 
 # ffmpegServer
-edt_LIBS += avcodec
-edt_LIBS += avdevice
-edt_LIBS += avformat
-edt_LIBS += avutil
-edt_LIBS += ffmpegServer
-edt_LIBS += swscale
+#edt_LIBS += avcodec
+#edt_LIBS += avdevice
+#edt_LIBS += avformat
+#edt_LIBS += avutil
+#edt_LIBS += ffmpegServer
+#edt_LIBS += swscale
 
 edt_LIBS += $(EPICS_BASE_IOC_LIBS)
 
