First version that supports live images. I'm getting stripes in the image which need to be resolved. Also, autosave, archive, and plugin support is minimal and needs work.
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@18311 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/Db/Makefile
+++ b/edtApp/Db/Makefile
@@ -12,7 +12,7 @@ DB += edtPdvCamera.db
 
 DB_INSTALLS += $(ASYN)/db/asynRecord.db
 DB_INSTALLS += $(AUTOSAVE)/db/save_restoreStatus.db
-DB_INSTALLS += $(EVENT)/db/evrPmc230.db
+DB_INSTALLS += $(EVENT2)/db/evrPmc230.db
 DB_INSTALLS += $(IOCADMIN)/db/iocSoft.db
 
 #
