Updated to latest modules so I can do an initial release
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@18483 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/pluginDb/Makefile
+++ b/edtApp/pluginDb/Makefile
@@ -25,10 +25,10 @@ DB += pluginTIFF.db
 DB += pluginTransform.db
 
 # Install viewer cmd scripts
-DB_INSTALLS += $(GIGE_CAM)/setupScripts/MonoBin2Viewer.cmd
-DB_INSTALLS += $(GIGE_CAM)/setupScripts/MonoBin4Viewer.cmd
-DB_INSTALLS += $(GIGE_CAM)/setupScripts/MonoFullViewer.cmd
-DB_INSTALLS += $(GIGE_CAM)/setupScripts/pluginStats.cmd
+DB_INSTALLS += $(ADSTREAM)/setupScripts/MonoBin2Viewer.cmd
+DB_INSTALLS += $(ADSTREAM)/setupScripts/MonoBin4Viewer.cmd
+DB_INSTALLS += $(ADSTREAM)/setupScripts/MonoFullViewer.cmd
+DB_INSTALLS += $(ADSTREAM)/setupScripts/pluginStats.cmd
 
 #----------------------------------------------------
 # Create and install (or just install)
