Added ioc-fee-orca1 and updated to latest ADEdtPdv
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@18692 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/src/Makefile
+++ b/edtApp/src/Makefile
@@ -18,6 +18,7 @@ DBD += edt.dbd
 edt_DBD += base.dbd
 edt_DBD += iocAdmin.dbd
 edt_DBD += autosaveSupport.dbd
+edt_DBD += diagTimer.dbd
 
 # EVR
 edt_DBD += evrSupport.dbd
@@ -48,6 +49,7 @@ edt_SRCS_DEFAULT += edtMain.cpp
 edt_LIBS += autosave
 edt_LIBS += devIocStats
 edt_LIBS += genSub
+edt_LIBS += diagTimer
 
 # EVR
 edt_LIBS += evrSupport
