Snapshotting current version which computes basic BLD values and packs them in an output buffer.
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@19503 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/Db/Makefile
+++ b/edtApp/Db/Makefile
@@ -5,6 +5,7 @@ include $(TOP)/configure/CONFIG
 
 # Create and install EDT Camera DB Files
 DB += edtPdvCamera.db
+DB += PluginBldSpectrometer.db
 
 #----------------------------------------------------
 # Create and install (or just install)
@@ -50,12 +51,14 @@ DB_INSTALLS += $(ADEDTPDV)/db/$(MODEL).proto
 # Archive files, templates, substitutions like this
 #
 ARCHIVE += edt-ioc.archive
+ARCHIVE += PluginBldSpectrometer.archive
 
 #----------------------------------------------------
 # Create and install (or just install)
 # Autosave request files, templates, substitutions like this
 #
 REQ += edt-ioc.req
+REQ += PluginBldSpectrometer.req
 
 include $(TOP)/configure/RULES
 #----------------------------------------
