--- a/edtApp/Db/PluginBldSpectrometer.template
+++ b/edtApp/Db/PluginBldSpectrometer.template
@@ -209,198 +209,6 @@ record(ai, "$(P)$(R)SigmaXY_RBV")
    field(TSE,  "-2")
 }
 
-###################################################################
-#  These records control time series                              #
-###################################################################
-record(mbbo, "$(P)$(R)TSControl")
-{
-   field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_CONTROL")
-   field(ZRVL, "0")
-   field(ZRST, "Erase/Start")
-   field(ONVL, "1")
-   field(ONST, "Start")
-   field(TWVL, "2")
-   field(TWST, "Stop")
-   field(THVL, "3")
-   field(THST, "Read") 
-}
-
-# This record periodically pokes the TSControl record with 3 to read the time series
-# but only when TSAcquiring = Acquiring
-record(longout, "$(P)$(R)TSRead")
-{
-   field(SDIS, "$(P)$(R)TSAcquiring NPP NMS")
-   field(DISV, "0")
-   field(OUT,  "$(P)$(R)TSControl PP MS")
-   field(VAL,  "3")
-   field(SCAN, "1 second")
-}
-
-record(longout, "$(P)$(R)TSNumPoints")
-{
-   field(PINI, "YES")
-   field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_NUM_POINTS")
-   field(VAL,  "$(NCHANS)")
-   field(DRVH, "$(NCHANS)")
-   info( autosaveFields, "VAL" )
-}
-
-record(longin, "$(P)$(R)TSCurrentPoint")
-{
-   field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_CURRENT_POINT")
-   field(SCAN, "I/O Intr")
-   field(TSE,  "-2")
-}
-
-record(bi, "$(P)$(R)TSAcquiring")
-{
-   field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_ACQUIRING")
-   field(ZNAM, "Done")
-   field(ONAM, "Acquiring")
-   field(ZSV,  "NO_ALARM")
-   field(OSV,  "MINOR")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSMinValue")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_MIN_VALUE")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSMinX")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_MIN_X")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSMinY")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_MIN_Y")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSMaxValue")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_MAX_VALUE")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSMaxX")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_MAX_X")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSMaxY")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_MAX_Y")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSMeanValue")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_MEAN_VALUE")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSSigma")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_SIGMA_VALUE")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSTotal")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_TOTAL")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSNet")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_NET")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSCentroidX")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_CENTROIDX_VALUE")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSCentroidY")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_CENTROIDY_VALUE")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSSigmaX")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_SIGMAX_VALUE")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSSigmaY")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_SIGMAY_VALUE")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
-record(waveform, "$(P)$(R)TSSigmaXY")
-{
-   field(DTYP, "asynFloat64ArrayIn")
-   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_TS_SIGMAXY_VALUE")
-   field(NELM, "$(NCHANS)")
-   field(FTVL, "DOUBLE")
-   field(SCAN, "I/O Intr")
-}
-
 
 ###################################################################
 #  These records control profiles                                 #
@@ -581,6 +389,31 @@ record(dfanout, "$(P)$(R)SetYHOPR")
     field(OUTA, "$(P)$(R)CursorY.HOPR NPP")
 }
 
+
+###################################################################
+#  These records control whether projections and COM are computed
+###################################################################
+record(bo, "$(P)$(R)ComputeProjections")
+{
+   field(PINI, "YES")
+   field(DTYP, "asynInt32")
+   field(OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_COMPUTE_PROJ")
+   field(VAL,  "0")
+   field(ZNAM, "No")
+   field(ONAM, "Yes")
+   info( autosaveFields, "VAL" )
+}
+
+record(bi, "$(P)$(R)ComputeProjections_RBV")
+{
+   field(DTYP, "asynInt32")
+   field(INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))BLD_COMPUTE_PROJ")
+   field(ZNAM, "No")
+   field(ONAM, "Yes")
+   field(ZSV,  "NO_ALARM")
+   field(OSV,  "MINOR")
+   field(SCAN, "I/O Intr")
+}
 
 ###################################################################
 #  These records control whether BLD statistics are sent
