Updated to latest ADEdtPdv R0.6.0 for latest features Updated to latest event2 R4.0.0-2.7.0 to remove dependency on genSub and miscUtils Changed 120Hz sequence exposure to 4.0ms and starting from line 828, 	which adds 24 lines to the image height. Fixed memory leak and some minor cleanup in BLD plugin Removed AcquirePeriod control from screen as we don't support it (yet) Added edm-ioc-fee-orca1.cmd
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@19718 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/src/Makefile
+++ b/edtApp/src/Makefile
@@ -26,7 +26,7 @@ edt_DBD += devMrfEr.dbd
 
 # areaDetector
 edt_DBD += busyRecord.dbd
-edt_DBD += genSubRecord.dbd
+#edt_DBD += genSubRecord.dbd
 edt_DBD += sscan.dbd
 edt_DBD += commonDriverSupport.dbd
 edt_DBD += edtPdvSupport.dbd
@@ -51,7 +51,7 @@ edt_SRCS_DEFAULT += edtMain.cpp
 # base and std modules
 edt_LIBS += autosave
 edt_LIBS += devIocStats
-edt_LIBS += genSub
+#edt_LIBS += genSub
 edt_LIBS += diagTimer
 edt_LIBS += bldClient
 
