Fixed BLD for ioc-fee-orca1.  New module versions for more stable operation
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@19922 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/Db/Makefile
+++ b/edtApp/Db/Makefile
@@ -11,12 +11,13 @@ DB += PluginBldSpectrometer.db
 # Create and install (or just install)
 # databases, templates, substitutions like this
 
-DB_INSTALLS += $(AREA_DETECTOR_SUPP)/db/timeStampSource.db
+#DB_INSTALLS += $(AREA_DETECTOR_SUPP)/db/timeStampSource.db
 DB_INSTALLS += $(ASYN)/db/asynRecord.db
 DB_INSTALLS += $(AUTOSAVE)/db/save_restoreStatus.db
 DB_INSTALLS += $(EVENT2)/db/evrPmc230.db
 DB_INSTALLS += $(EVENT2)/db/evrSLAC.db
 DB_INSTALLS += $(IOCADMIN)/db/iocSoft.db
+DB_INSTALLS += $(TIMESTAMPFIFO)/db/timeStampFifo.template
 
 #
 # Install Camera db, configuration, and protocol files
