Added output PV's for BLD contents Also added control over timeStampFifo's timeStamp policy and fixed some issues w/ the sequences to select between 120hz and full mode.  Also added history for key BLD and camera stats, along w/ GUI support for above. Updated to latest ADEdtPdv and timeStampFifo modules.
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@19941 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/Db/Makefile
+++ b/edtApp/Db/Makefile
@@ -4,6 +4,7 @@ include $(TOP)/configure/CONFIG
 #  ADD MACRO DEFINITIONS AFTER THIS LINE
 
 # Create and install EDT Camera DB Files
+DB += ai_hist.db
 DB += edtPdvCamera.db
 DB += PluginBldSpectrometer.db
 
@@ -51,6 +52,7 @@ DB_INSTALLS += $(ADEDTPDV)/db/$(MODEL).proto
 # Create and install (or just install)
 # Archive files, templates, substitutions like this
 #
+ARCHIVE += ai_hist.archive
 ARCHIVE += edt-ioc.archive
 ARCHIVE += PluginBldSpectrometer.archive
 
@@ -58,6 +60,7 @@ ARCHIVE += PluginBldSpectrometer.archive
 # Create and install (or just install)
 # Autosave request files, templates, substitutions like this
 #
+REQ += ai_hist.req
 REQ += edt-ioc.req
 REQ += PluginBldSpectrometer.req
 
