Added DarkLevel param to BldSpectrometer plugin. DarkLevel is subtracted from each image pixel, preserving negative values so noise cancels out.  Set default to 100 for DarkLevel per Orca specs
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@21112 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/Db/PluginBldSpectrometer.template
+++ b/edtApp/Db/PluginBldSpectrometer.template
@@ -454,6 +454,24 @@ record( waveform, "$(P)$(R)HorizProj" )
 	info( autosaveFields, "DESC" )
 }
 
+record( ao, "$(P)$(R)DarkLevel" )
+{
+    field( PINI, "YES" )
+    field( DTYP, "asynFloat64" )
+    field( OUT,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))SPEC_DARK_LEVEL" )
+    field( VAL,  "100.0" )
+    field( PREC, "3" )
+	info( autosaveFields, "VAL DESC HIGH HIHI HHSV HSV LOLO LOW LLSV LSV PREC" )
+}
+record( ai, "$(P)$(R)DarkLevel_RBV" )
+{
+	field( DTYP, "asynFloat64" )
+	field( INP,  "@asyn($(PORT),$(ADDR=0),$(TIMEOUT=1))SPEC_DARK_LEVEL" )
+	field( SCAN, "I/O Intr" )
+    field( PREC, "3" )
+	info( autosaveFields, "DESC HIGH HIHI HHSV HSV LOLO LOW LLSV LSV PREC TSE" )
+}
+
 record( ao, "$(P)$(R)HorizBaseline" )
 {
     field( PINI, "YES" )
