Added linuxRT build support and bumped up ADEdtPdv version
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@21292 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/src/Makefile
+++ b/edtApp/src/Makefile
@@ -93,7 +93,7 @@ edt_LIBS += ca
 edt_LIBS += Com
 #edt_LIBS += PvAPI
 edt_LIBS += sz
-edt_SYS_LIBS += X11
+#edt_SYS_LIBS += X11
 edt_SYS_LIBS += xml2
 edt_SYS_LIBS += tiff
 edt_SYS_LIBS += jpeg
