Fixed static build issues
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@21705 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/src/Makefile
+++ b/edtApp/src/Makefile
@@ -64,6 +64,10 @@ edt_LIBS += devMrfEr
 edt_LIBS += drvMrf
 edt_LIBS_Linux += mrfApi
 
+# EDT PDV libs
+edt_LIBS += edtPdv
+edt_LIBS += pdv
+
 # areaDetector
 edt_LIBS += calc
 edt_LIBS += busy
@@ -75,8 +79,6 @@ edt_LIBS += netCDF
 edt_LIBS += NeXus
 edt_LIBS += hdf5
 edt_LIBS += simDetector
-edt_LIBS += edtPdv
-edt_LIBS += pdv
 edt_LIBS += stream
 edt_LIBS += sscan
 edt_LIBS += asyn
