--- a/iocBoot/ioc-tst-up900/Makefile
+++ b/iocBoot/ioc-tst-up900/Makefile
@@ -1,6 +1,6 @@
 TOP = ../..
 include $(TOP)/configure/CONFIG
-ARCH = linuxRT_glibc-x86_64
+ARCH = linux-x86_64
 TARGETS = envPaths
 
 # Make sure these archive files are fully expanded
