add support for templated ioc instances
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@23276 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/Db/Makefile
+++ b/edtApp/Db/Makefile
@@ -70,6 +70,8 @@ ARCHIVE += edtCam_hist.archive
 ARCHIVE += cross.tpl-arch
 ARCHIVE += edt-ioc.archive
 ARCHIVE += PluginBldSpectrometer.archive
+ARCHIVE += evr_PMC.archive
+ARCHIVE += evr_SLAC.archive
 
 #----------------------------------------------------
 # Create and install (or just install)
@@ -80,6 +82,8 @@ REQ += edtCam_hist.req
 REQ += cross_settings.req
 REQ += edt-ioc.req
 REQ += PluginBldSpectrometer.req
+REQ	+= evr_PMC.req
+REQ += evr_SLAC.req
 
 include $(TOP)/configure/RULES
 #----------------------------------------
