--- a/iocBoot/templates/ioc-sample.cfg
+++ b/iocBoot/templates/ioc-sample.cfg
@@ -1,17 +1,31 @@
-#
-# CONFIG file for gigE Camera
-#
+RELEASE=/reg/g/pcds/package/epics/3.14/ioc/common/edtCam/RX.Y.Z
 
-#RELEASE=/reg/g/pcds/package/epics/3.14/ioc/common/gigECam/R1.X.0
-RELEASE=/reg/neh/home2/bhill/wa2/epics/ioc/common/gigECam/current
+ENGINEER    = "Bruce Hill (bhill)"
+LOCATION    = "SXR Roving GigE 2"
+IOC_PV      = IOC:FEE1:441
 
-ENGINEER	= "Bruce Hill (bhill)"
-LOCATION	= "SXR Roving GigE 2"
-IOC_PV		= SXR:EXP:GIGE:
+# Optional global config fields
+EPICS_CA_MAX_ARRAY_BYTES    = 20000000
+ST_CMD_DELAYS               = 1
 
-CAM	    	= SXR:EXP:GIGE:02
-MODEL		= MantaG046B
-CAM_IP		= gige-sxr-cam02
-PLUGINS		= pcdsPlugins
-HTTP_PORT	= 7802
+# Required EVR CONFIG FIELDS (ONLY ONE EVR PER IOC)
+EVR(NAME=EVR:FEE1:441,TYPE=PMC)
+# Optional EVR CONFIG FIELDS
+#EVR(NAME=EVR:FEE1:441,TYPE=PMC,CARD=0,DEBUG=0)
 
+# Required CAMERA CONFIG FIELDS (ONLY ONE CAMERA PER IOC)
+CAMERA(NAME=CAMR:FEE1:441,TYPE=hamaOrcaFlash4_0,CHAN=0,TRIG=0,HTTP_PORT=7800,MJPG_PORT=8081)
+# Optional CAMERA CONFIG FIELDS
+#CAMERA(NAME=CAMR:FEE1:441,TYPE=hamaOrcaFlash4_0,BOARD=0,CHAN=0,TRIG=0,HTTP_PORT=7800,MJPG_PORT=8081,PORT=CAM,MODE=Base,CAMTRACE=1,CAMTRACEIO=0,SERTRACE=1,SERTRACEIO=1)
+
+# Required BLD CONFIG FIELDS
+BLD(NAME=CAMR:FEE1:441,SRC=95)
+# Optional BLD CONFIG FIELDS
+#BLD(NAME=CAMR:FEE1:441,SRC=95,XTC=0x10048,PORT=10148,MAX=8980)
+
+VIEWER(NAME=MonoFull)
+VIEWER(NAME=MonoBin2)
+VIEWER(NAME=MonoBin4)
+
+PLUGIN(NAME=Stats,NUM=1,SRC=CAM,LOC=setupScripts,PVNAME=CAMR:FEE1:441)
+#PLUGIN(NAME=Stats,NUM=1,SRC=CAM,LOC=setupScripts,ARCHIVE=Stats)
