Took out unnneeded PROD_DEPLIB_DIRS for pcre
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@24289 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/src/Makefile
+++ b/edtApp/src/Makefile
@@ -107,13 +107,8 @@ edt_SYS_LIBS += z
 edt_SYS_LIBS += pthread
 edt_SYS_LIBS += dl
 
-PROD_DEPLIB_DIRS += $(PCRE_TOP)/lib
-PROD_DEPLIB_DIRS += /usr/lib64
-
-#ifneq (,$(wildcard $(PCRE_LIB)))
-#PROD_DEPLIB_DIRS += $(PCRE_LIB)
-#edt_LIBS += pcre
-#endif
+#PROD_DEPLIB_DIRS += $(PCRE_TOP)/lib
+#PROD_DEPLIB_DIRS += /usr/lib64
 
 # ffmpegServer
 #edt_LIBS += avcodec
@@ -129,9 +124,16 @@ edt_LIBS += timeStampFifo
 
 edt_LIBS += $(EPICS_BASE_IOC_LIBS)
 
+# install: showme
+
 #===========================
 
 include $(TOP)/configure/RULES
 #----------------------------------------
 #  ADD RULES AFTER THIS LINE
+
+showme:
+	@echo T_A=$(T_A)
+	@echo PKG_ARCH=$(PKG_ARCH)
+	@echo PCRE_TOP=$(PCRE_TOP)
 
