--- a/iocBoot/vioc-tst-opal2/Makefile
+++ b/iocBoot/vioc-tst-opal2/Makefile
@@ -1,6 +1,6 @@
 TOP = ../..
 include $(TOP)/configure/CONFIG
-ARCH = rhel6-x86_64
+ARCH = linuxRT_glibc-x86_64
 TARGETS = envPaths
 
 # Make sure these archive files are fully expanded
@@ -9,12 +9,12 @@ USR_ARCHIVEFLAGS += -V
 #----------------------------------------------------
 # Create and install IOC archive file
 #
-ARCHIVE += ioc-tst-opal1.archive
+ARCHIVE += vioc-tst-opal2.archive
 
 #----------------------------------------------------
 # Create and install IOC autosave file
 #
-REQ += ioc-tst-opal1.req
+REQ += vioc-tst-opal2.req
 
 include $(TOP)/configure/RULES
 include $(TOP)/configure/RULES.ioc-targets
