Renamed PluginBldSpectrometer to pluginBldSpectrometer for consistent naming w/ other plugins
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@24593 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/src/Makefile
+++ b/edtApp/src/Makefile
@@ -37,14 +37,15 @@ edt_DBD += bldClient.dbd
 
 #edt_DBD += genSubRecord.dbd
 edt_DBD += timeStampFifo.dbd
-edt_DBD += PluginBldSpectrometer.dbd
+edt_DBD += pluginBldSpectrometer.dbd
 
 # ffmpegServer
 #edt_DBD += ffmpegServer.dbd
 
 # <name>_registerRecordDeviceDriver.cpp will be created from <name>.dbd
 edt_SRCS += edt_registerRecordDeviceDriver.cpp
-edt_SRCS += PluginBldSpectrometer.cpp
+edt_SRCS += pluginBldSpectrometer.cpp
+edt_SRCS += libedt.c
 edt_SRCS_DEFAULT += edtMain.cpp
 
 serial_cmd_SRCS += serial_cmd.c
